--- a/index.html
+++ b/index.html
@@ -13,6 +13,62 @@
     <button onclick="addTodo();" class="add-todo-list">Add</button>
   </div>
   <div class="js-todoList todo-grid"></div>
-<script src="scripts/11-todo-list.js"></script>
+<script src="scripts/11-todo-list.js">
+  
+const todoList = [{name : 'make dinner', dueDate : '2024-07-01'},
+  {name : 'wash dishes', dueDate : '2024-07-01'}];
+
+renderTodoList();
+
+function renderTodoList(){
+  let todoListHTML = '';
+
+  for(let i = 0; i < todoList.length; i++){
+    const todoObject = todoList[i];
+    //const name = todoObject.name;
+    //const dueDate = todoObject.dueDate;
+    const {name , dueDate} = todoObject;
+
+    const todoHTML = `
+
+      <div>${name} </div>
+
+      <div>${dueDate} </div>
+
+      <button onclick = "
+        todoList.splice(${i}, 1);
+        renderTodoList();" class = "delete-button">
+      Delete</button>
+      
+    `; 
+    todoListHTML += todoHTML;
+  }
+
+    document.querySelector('.js-todoList')
+      .innerHTML = todoListHTML;
+}
+
+function addTodo(){
+
+  const inputElement = document.querySelector('.js-input');
+  const inputDate = document.querySelector('.js-due-date');
+
+  const name = inputElement.value;
+  const dueDate = inputDate.value;
+
+  todoList.push(
+    {//name : name,
+      //dueDate : dueDate,
+      name,
+     dueDate});
+
+  console.log(todoList);
+
+  inputElement.value = '';
+  inputDate.value = '';
+  renderTodoList();
+}
+
+</script>
 </body>
 </html>
