--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="styles/11-todo-list.css">
 </head>
 <body>
-  <p>Todo List Practice 1</p>
+  <p>Todo List</p>
   <div class="todo-list-grid">
     <input type="text" placeholder="Todo name" class="js-input name-input">
     <input type="date" class="js-due-date due-date-input">
